Target Java 11 and update tests to use Java 21